--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <link rel="stylesheet" href="style.css">
+    <title>DurkaMarket</title>
     <script src="script.js"></script>
 </head>
 <body>
