Added durka season pass
+Durka Season Pass
+Durka Season Premium Pass

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 <tr><td>MiniAdmin = 100ⓒ</td></tr>
                 <tr><td>FullAdmin = 500ⓒ</td></tr>
                 <tr><td>Owner = 100000000000000000000000000000000000ⓒ</td></tr>
+                <tr><td>Durka Season Pass = 1000ⓒ</td></tr>
+                <tr><td>Durka Season Premium Pass = 5000ⓒ</td></tr>
                 <tr><td style="color: rgb(150, 150, 150)">это шутка</td></tr>
             </tr>
         </table>
